<resources>
    <string name="app_name" translatable="false">Prueba Axosnet</string>
    <string name="about_title">Acerca</string>

    <string name="general_loading">Cargando</string>
    <string name="general_cancel">Cancelar</string>
    <string name="general_done">Listo</string>
    <string name="general_yes">Si</string>
    <string name="general_search">Buscar</string>
    <string name="general_error" translatable="false">Error</string>
    <string name="general_init_error">Error de inicialización</string>

    <string name="model_recibos_id" translatable="false">ID</string>
    <string name="model_recibos_provider" translatable="false">Provider</string>
    <string name="model_recibos_amount" translatable="false">Amount</string>
    <string name="model_recibos_emission" translatable="false">Emission date</string>
    <string name="model_recibos_comment" translatable="false">Comment</string>
    <string name="model_recibos_currency" translatable="false">Currency</string>
    <string name="model_recibos_amount_currency" translatable="false">%.2f %s</string>

    <string name="main_alertdialog_internetconnection_title">No hay conexión</string>
    <string name="main_alertdialog_internetconnection_message">Enciende los datos móviles o el Wi-Fi para continuar, la aplicación se cerrará</string>
    <string name="main_actionsearch_dialog_title">Ingresa el ID a buscar</string>
    <string name="main_actionsearch_dialog_notfound">No se ha encontrado recibo con el ID proporcionado</string>
    <string name="main_recibos_getall_error">Ha ocurrido un error al mostrar los recibos, intenta de nuevo</string>
    <string name="main_recibos_emptyset">No hay recibos para mostrar</string>
    <string name="main_fab_add">Agregar nuevo</string>
    <string name="main_fab_search">Buscar por ID</string>
    <string name="main_exit_dialog_title">Salir</string>
    <string name="main_exit_dialog_message">¿Desea salir de la app?</string>

    <string name="main_recycler_receipt_id">ID: %d</string>

    <string name="detalles_operaciones_title">Operaciones</string>
    <string name="detalles_operaciones_delete">Eliminar</string>
    <string name="detalles_operaciones_delete_message">¿Está seguro de eliminar este recibo?</string>
    <string name="detalles_operaciones_edit">Editar</string>

    <string name="formulario_button_save">Guardar</string>
    <string name="formulario_button_edit">Actualizar</string>
    <string name="formulario_init_error">Ocurrio un error, verifique el id</string>
    <string name="formulario_recibos_provider_empty">Provider no puede estar vacio</string>
    <string name="formulario_recibos_amount_empty">Amount no puede estar vacio</string>
    <string name="formulario_recibos_emission_empty">Emission date no puede estar vacio</string>
    <string name="formulario_recibos_comment_empty">Comment no puede estar vacio</string>
    <string name="formulario_recibos_currency_empty">Currency no puede estar vacio</string>
</resources>